kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/num/sized/u8.k
use super.*;

pub let(*) eq = fun _(a: U8, b: U8): Bool {
    match a {
        u8(an, _) => match b {
            u8(bn, _) => nat.eq(an, bn),
        },
    }
};