kanc/src/tests/sample_code/should_fail/single_file/type_check/wrong_number_of_arguments/fun.k
type U {
    u: U,
}

let foo = fun bar_(x: U): U {
    U.u
}(U.u, U.u);
